crates/ars-components/src/utility/toggle_button/snapshots/ars_components__utility__toggle_button__tests__toggle_button_hidden_input_config_default_on.snap
---
source: crates/ars-components/src/utility/toggle_button/mod.rs
expression: "snapshot_config(&hidden_default.connect(&|_| {}).hidden_input_config())"
---
Some(
    HiddenInputConfig {
        name: "format",
        value: Single(
            "on",
        ),
        form_id: None,
        disabled: false,
    },
)
