crates/ars-components/src/utility/toggle_button/snapshots/ars_components__utility__toggle_button__tests__toggle_button_hidden_input_config_explicit.snap
---
source: crates/ars-components/src/utility/toggle_button/mod.rs
expression: "snapshot_config(&hidden_explicit.connect(&|_| {}).hidden_input_config())"
---
Some(
    HiddenInputConfig {
        name: "format",
        value: Single(
            "bold",
        ),
        form_id: Some(
            "article",
        ),
        disabled: false,
    },
)
