crates/ars-components/src/utility/toggle_button/snapshots/ars_components__utility__toggle_button__tests__toggle_button_root_with_value.snap
---
source: crates/ars-components/src/utility/toggle_button/mod.rs
expression: "snapshot_attrs(&with_value.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle-button",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "bold",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "false",
            ),
        ),
        (
            Id,
            String(
                "favorite",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
